[package]
name = "ynab-api"
version = "0.1.0"
edition = "2024"

[dependencies]
builder-pattern = "0.4.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-api-client = "0.1.1"
uuid = { version = "1.19.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
