[package]
name = "ynat"
version = "0.1.0"
edition = "2021"

[dependencies]
ynab-api = { path = "../ynab-api/" }
ynat-auth = { path = "../ynat-auth/", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
chrono = "0.4"
convert_case = "0.10.0"
dirs = "6.0"
throbber-widgets-tui = "0.10.0"
secrecy = "0.10.3"
itertools = "0.14.0"
uuid = "1.19"
